# tale-studio

./: .env.example  .gitignore  README.md  pyproject.toml
adapters/: __init__.py
adapters/gateways/: __init__.py  gemini_llm.py  imagen_image.py  openai_llm.py  veo_video.py
adapters/knowledge_db/: __init__.py  yaml_knowledge_db.py
adapters/repositories/: __init__.py  file_repository.py
docs/archive/: bugfix_20260120.md
domain/: exceptions.py
domain/entities/: __init__.py  character.py  i2v_prompt.py  prompt.py  scene.py  shot.py
domain/entities/ava/: __init__.py  anchor.py  expression.py
domain/entities/music/: __init__.py  music_metadata.py
domain/value_objects/: __init__.py  duration.py  generation_method.py  scene_type.py  shot_type.py  style_heuristics.py
infrastructure/: __init__.py  api_key_pool.py  cli.py  settings.py
scripts/: generate_cinematic_shot.py  generate_videos.py  run_pipeline.py  run_trailer_pipeline.py
specs/: architecture.md  ava_framework.md  decisions.md  dialogue.md  mvp.md  next_phase.md  pumpup.md  style_heuristics.md  style_heuristics_v2.md  technique_db.md
specs/lore/: story_context.md
tests/: conftest.py
usecases/: __init__.py  i2v_prompt_builder.py  music_to_video_adapter.py  prompt_builder.py  scene_architect.py  shot_composer.py
usecases/ava/: __init__.py  bridge_translator.py  expression_adapter.py
usecases/interfaces/: __init__.py  asset_repository.py  image_generator.py  knowledge_db.py  llm_gateway.py  video_generator.py
usecases/music/: __init__.py  music_to_anchor.py
(+20 files in other folders)
